--- a/main.tex
+++ b/main.tex
@@ -1,16 +1,32 @@
-\documentclass{article}
+\documentclass[twocolumn]{article}
+
+
+\usepackage[ngerman]{babel}
+\usepackage{lipsum}
+
+% Muss vor \author etc. geladen werden
+\usepackage{titling}
 
 \author{Ihr Name}
 \date{\today}
 
-\usepackage[ngerman]{babel}
-\usepackage{lipsum}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead[L]{\leftmark}
+\fancyhead[C]{}
+\fancyhead[R]{\theauthor}
+\fancyfoot[L,C]{}
+\fancyfoot[R]{\thepage}
+\renewcommand{\headrulewidth}{0.1pt}
+\renewcommand{\footrulewidth}{0.1pt}
 
 \title{Einführung in \LaTeX}
 
 \begin{document}
 
 \maketitle
+
+\tableofcontents
 
 \section{Erster Abschnitt}
 
