--- a/02-struktur/main.tex
+++ b/02-struktur/main.tex
@@ -12,6 +12,9 @@
 
 \tableofcontents
 
+% Probieren Sie die Verwendung einer \subsection{} aus
+% Wenn Sie die Dokumentenklasse auf `book` ändern, können Sie auch \chapter{} verwenden
+
 \section{Einführung}
 \lipsum[1-3]
 
@@ -28,6 +31,6 @@
 \lipsum[4-6]
 
 \section{Schluss}
-\lipsum[7-9]
+\lipsum[7-8]
 
 \end{document}
