added list example

--- a/01-intro/main.tex
+++ b/01-intro/main.tex
@@ -4,7 +4,7 @@
 % auf die Anführungszeichen weiter unten im Text.
 \usepackage[ngerman]{babel}
 
-\title{Mein erstes Dokument}
+\title{Intro}
 \author{Mein Name}
 
 % Was passiert, wenn Sie das Paket babel entfernen?
