--- a/08-bibliography/bibliography.bib
+++ b/08-bibliography/bibliography.bib
@@ -1,6 +1,7 @@
 @book{oetiker_2022,
   title  = {The Not So Short Introduction to {LaTeX}},
   author = {Oetiker, Tobias and Serwin, Marcin and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
+  url    = {https://tobi.oetiker.ch/lshort/lshort.pdf},
   year   = {2023}
 }
 
