--- a/08-bibliography/main.tex
+++ b/08-bibliography/main.tex
@@ -4,8 +4,10 @@
 \usepackage{lipsum}
 \usepackage[
   style=authoryear,
+  % Was passiert, wenn Sie diese Zeile auskommentieren?
   autocite=footnote,
-  url=false,
+  % Was bewirkt diese Zeile?
+  % url=false,
   giveninits,
 ]{biblatex}
 
