--- a/08-bibliography/main.tex
+++ b/08-bibliography/main.tex
@@ -6,8 +6,7 @@
   style=authoryear,
   % Was passiert, wenn Sie diese Zeile auskommentieren?
   autocite=footnote,
-  % Was bewirkt diese Zeile?
-  % url=false,
+  url=false,
   giveninits,
 ]{biblatex}
 
