--- a/02-struktur/main.tex
+++ b/02-struktur/main.tex
@@ -14,6 +14,7 @@
 
 % Probieren Sie die Verwendung einer \subsection{} aus
 % Wenn Sie die Dokumentenklasse auf `book` ändern, können Sie auch \chapter{} verwenden
+% Was passiert dann?
 
 \section{Einführung}
 \lipsum[1-3]
