--- a/01-intro/main.tex
+++ b/01-intro/main.tex
@@ -15,11 +15,21 @@
 
 \maketitle % Ein Titel muss explizit platziert werden
 
-Jeder Absatz beginnt normalerweise mit einer Einrückung. Diese kann lokal mit \verb|\noindent| oder global durch Verwendung eines Pakets wie z.B. \verb|parskip| vermieden werden.
-Man kann Leerzeichen     beliebig     verwenden, diese gelten aber nur als ein einzelner freier Raum. \LaTeX     eignet sich zur Erstellung von wissenschaftlichen Arbeiten.
-Zeilenumbrüche müssen mit Leerzeichen oder \verb|\\| erstellt werden, ansonsten wird der Text zum bestehenden Absatz gezählt.
+Jeder Absatz beginnt normalerweise mit einer Einrückung.
+Diese kann lokal mit \verb|\noindent| oder global
+durch Verwendung eines Pakets wie z.B. \verb|parskip| vermieden werden.
+Man kann Leerzeichen     beliebig     verwenden,
+diese gelten aber nur als ein einzelner freier Raum.
+\LaTeX     eignet sich zur Erstellung von wissenschaftlichen Arbeiten.
+Zeilenumbrüche müssen mit Leerzeichen oder \verb|\\| erstellt werden,
+ansonsten wird der Text zum bestehenden Absatz gezählt.
 
-Man kann in \LaTeX{} Wörter \textbf{fett}, \textit{kursiv} oder \underline{unterstrichen} darstellen.  Der Befehl \verb|\emph{}| hebt kontextsensitiv hervor, das heißt kursiv im normalen Text und normal im kursiven Text. Ich kann sogar \textsf{serifenlose Schrift} oder \texttt{Schreibmaschinenschrift} verwenden und auch \textsc{Kapitälchen} nutzen. Normale "Anführungszeichen" sollten nicht verwendet werden. Ich kann Text in "`solche"' und ``solche'' Anführungszeichen setzen.\\
+Man kann in \LaTeX{} Wörter \textbf{fett}, \textit{kursiv} oder \underline{unterstrichen} darstellen.
+Der Befehl \verb|\emph{}| hebt kontextsensitiv hervor,
+das heißt kursiv im normalen Text und normal im kursiven Text.
+Ich kann sogar \textsf{serifenlose Schrift} oder \texttt{Schreibmaschinenschrift} verwenden
+und auch \textsc{Kapitälchen} nutzen. Normale "Anführungszeichen" sollten nicht verwendet werden.
+Ich kann Text in "`solche"' und ``solche'' Anführungszeichen setzen.\\
 
 \noindent Warum kann man hier nicht einfach \verb|\LaTeX| ohne Zusätze schreiben?\\
 
@@ -27,6 +37,9 @@ Man kann in \LaTeX{} Wörter \textbf{fett}, \textit{kursiv} oder \underline{unte
 \noindent\LaTeX{} eignet sich zur Erstellung von wissenschaftlichen Arbeiten.\\
 \noindent\LaTeX\ eignet sich zur Erstellung von wissenschaftlichen Arbeiten.\\
 
-Sonderzeichen wie \$, \# und \% lassen sich ebenfalls darstellen, haben aber in \LaTeX{} eine eigene Bedeutung, weswegen ihnen ein \textbackslash{} vorangestellt werden muss, und der \textbackslash{} selbst ist ein \verb|\textbackslash|.
+Sonderzeichen wie \$, \# und \% lassen sich ebenfalls darstellen,
+haben aber in \LaTeX{} eine eigene Bedeutung,
+weswegen ihnen ein \textbackslash{} vorangestellt werden muss,
+und der \textbackslash{} selbst ist ein \verb|\textbackslash|.
 
 \end{document}
