--- a/02-struktur/main.tex
+++ b/02-struktur/main.tex
@@ -12,9 +12,9 @@
 
 \tableofcontents
 
-% Probieren Sie die Verwendung einer \subsection{} aus
+% Probieren Sie die Verwendung von \subsection{} und \subsubsection{} aus
+% Wie lässt sich die Gliederungstiefe des Inhaltsverzeichnisses einstellen?
 % Wenn Sie die Dokumentenklasse auf `book` ändern, können Sie auch \chapter{} verwenden
-% Was passiert dann?
 
 \section{Einführung}
 \lipsum[1-3]
